--- a/sass/pages/_responsive.scss
+++ b/sass/pages/_responsive.scss
@@ -75,12 +75,16 @@
         right:-2rem;
         top:0.5rem;
     }
-    .fa-heart {
+    .restaurant-menu .restaurant-name .fa-solid {
         //position des deux coeurs l'un sur l'autre à droite
         position: absolute;
         right:-2rem;
         top:0.5rem;
     }
+
+
+
+
     .restaurant-menu{
     align-items: center;
     }
